test/corpus/basics-2-choices.txt
===
choice
===
Hello world!
*	Hello back!
	Nice to hear from you!

---

(file
  (contentText)
  (choice
    (choiceBullets)
    postSupression: (contentText))
  (contentText))

===
supressed choice text
===
Hello world!
*	Hello [back!] right back to you!
	Nice to hear from you!

---

(file
  (contentText)
  (choice
    (choiceBullets)
    preSupression: (contentText)
    inSupression: (contentText)
    postSupression: (contentText))
  (contentText))

===
deeper choice
===
Hello world!
* *	Hello back!
	Nice to hear from you!

---

(file
  (contentText)
  (choice
    (choiceBullets)
    postSupression: (contentText))
  (contentText))

===
sticky choice
===
Hello world!
+	Hello back!
	Nice to hear from you!

---

(file
  (contentText)
  (choice
    (choiceBullets)
    postSupression: (contentText))
  (contentText))
