test/corpus/weave-2-nested-flow.txt
===
NestedFlow
===
* a
** b
** c
-- d
* e
- f

---

(file
  (choice
    postSupression: (contentText))
  (choice
    postSupression: (contentText))
  (choice
    postSupression: (contentText))
  (gather
    text: (contentText))
  (choice
    postSupression: (contentText))
  (gather
    text: (contentText)))
